<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/local_tip"
        android:textColor="#a6a6b2"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_input"
        android:gravity="top"
        android:hint="@string/inner_input_hint"
        android:maxLines="100"
        android:maxLength="35"
        android:textColor="#333333"
        android:textColorHint="#6e6f78"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/tvChooseOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_choose_red"
        android:gravity="center_vertical"
        android:text="@string/timing_choose_one"
        android:textColor="@color/tv_local_color"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#E6E6EC"/>

    <TextView
        android:id="@+id/tvChooseTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_choose_red"
        android:gravity="center_vertical"
        android:text="@string/timing_choose_two"
        android:textColor="@color/tv_local_color"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#E6E6EC"/>

    <TextView
        android:id="@+id/tvChooseThree"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_choose_red"
        android:gravity="center_vertical"
        android:text="@string/timing_choose_three"
        android:textColor="@color/tv_local_color"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#E6E6EC"/>

    <TextView
        android:id="@+id/tvChooseFour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_choose_red"
        android:gravity="center_vertical"
        android:text="@string/timing_choose_four"
        android:textColor="@color/tv_local_color"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#E6E6EC"/>

    <TextView
        android:id="@+id/tvChooseFive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_choose_red"
        android:gravity="center_vertical"
        android:text="@string/timing_choose_five"
        android:textColor="@color/tv_local_color"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#E6E6EC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/local_tip_2"
        android:textColor="#a6a6b2"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_local"
        android:text="@string/btn_test"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>
</LinearLayout>