<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/inner_tip"
        android:textColor="#a6a6b2"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_input"
        android:gravity="top"
        android:hint="@string/inner_input_hint"
        android:maxLines="100"
        android:maxLength="35"
        android:textColor="#333333"
        android:textColorHint="#6e6f78"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn_inner"
        android:text="@string/btn_test"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>
</LinearLayout>